# mercari-auto-discount

./: .gitignore  Dockerfile  README.md  config.py  crawler.py  docker-compose.yml  heroku.yml  logger.py  main.py  mercari_auto_discount.command
app/: .devcontainer.json  Dockerfile  README.md  config.py  crawler.py  logger.py  main.py  pyproject.toml  requirements.txt
app/crawler/mercari/: __init__.py  base_crawler.py  discount_crawler.py  sync_ne_crawler.py  weekly_comment_crawler.py  weekly_comment_create_crawler.py  weekly_comment_delete_crawler.py
app/factory/: __init__.py  crawler_factory.py
app/profile/myprofile/: DevToolsActivePort  Local State
app/profile/myprofile/Default/: Cookies  Favicons  History  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Visited Links  Web Data
app/profile/myprofile/Default/DawnCache/: data_1  index
app/profile/myprofile/Default/Extension Scripts/: LOG
app/profile/myprofile/Default/Extension State/: LOG  LOG.old
app/profile/myprofile/Default/GPUCache/: data_1  index
app/profile/myprofile/Default/Session Storage/: LOG  LOG.old
app/profile/myprofile/Default/Sessions/: Session_13311353030781191  Session_13311353174320402  Tabs_13311353031861109  Tabs_13311353175640607
app/profile/myprofile/Default/Site Characteristics Database/: LOG  LOG.old
app/profile/myprofile/Default/WebStorage/: QuotaManager
app/profile/myprofile/GrShaderCache/: data_0  data_1  data_2  index
app/profile/myprofile/ShaderCache/: data_1  index
(+574 files in other folders)
