[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["nakazono1011 <syousanitiosi1011@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
async-generator = "1.10"
attrs = "22.1.0"
beautifulsoup4 = "4.11.1"
certifi = "2022.9.24"
exceptiongroup = "1.0.0"
h11 = "0.14.0"
idna = "3.4"
outcome = "1.2.0"
pysocks = "1.7.1"
selenium = "4.5.0"
sentry-sdk = "1.19.1"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
soupsieve = "2.3.2.post1"
trio = "0.22.0"
trio-websocket = "0.9.2"
urllib3 = "1.26.12"
wsproto = "1.2.0"
psutil = "^5.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
